<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Pendaftaran"
            android:gravity="center"
            android:textSize="15pt"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DNamaError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background=""
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/DNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/MasukkanNama"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DAlamatError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/DAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/Masukalamat"
                android:inputType="textImeMultiLine"
                android:maxLines="3"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/idJenisKelamin"
                android:text="@string/jenisklm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="#000000" />

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/rgJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/Laki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/Laki"
                    android:textColor="#000000"
                    />

                <RadioButton
                    android:id="@+id/Perempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/Prem"
                    android:textColor="#000000"
                    />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idAgama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Agama"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/rgAgama1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Katolik"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/katolik"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/Islam"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/islam"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/Konghucu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/konghucu"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/Budha"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/budha"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/Hindu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/hindu"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/Kristen"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/kristen"
                    android:textColor="#000000" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/idKepercayaan"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/pkepercayaan"
                    android:textColor="#000000" />
            </RadioGroup>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/DEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/MasEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafPwError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/DPw"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/MasPass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DrepwError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Drepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/MasKemPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBatal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnBtl"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                app:backgroundTint="#2C3E50"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnDftr"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                app:backgroundTint="#2C3E50"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
